--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "prepare": "npm run clean && npm run build"
   },
   "dependencies": {
-    "@jupyterlab/application": ">=0.17.0 <0.20.0",
+    "@jupyterlab/application": ">=1.0.0-alpha.6 <2.0.0",
     "@jupyterlab/mainmenu": ">=0.8.0 < 0.9.0",
-    "@jupyterlab/notebook": ">=0.17.0 <0.20.0",
-    "@jupyterlab/fileeditor": ">=0.17.0 <0.20.0"
+    "@jupyterlab/notebook": ">=1.0.0-alpha.7 <2.0.0",
+    "@jupyterlab/fileeditor": ">=1.0.0-alpha.6 <2.0.0"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
